Added Higher or Lower

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".CurrencyConverterActivity" />
-        <activity android:name=".NumberShapesActivity"></activity>
+        <activity android:name=".NumberShapesActivity" />
+        <activity android:name=".HigherOrLowerActivity"></activity>
     </application>
 
 </manifest>
