--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shahharshendra.embeddedapps">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +23,8 @@
         <activity android:name=".HigherOrLowerActivity" />
         <activity android:name=".BasicPhrasesActivity" />
         <activity android:name=".TimesTablesActivity" />
-        <activity android:name=".TimeCounterActivity"></activity>
+        <activity android:name=".TimeCounterActivity" />
+        <activity android:name=".GuessTheCelebrityActivity"></activity>
     </application>
 
 </manifest>
